# edbs-scraper

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  cli.py  compare.py  config.py  main.py  prompt.py  push_to_openai_vdb.py  pyproject.toml  scrape.py  send_email.py  summarization.py  summarize.py  todo.md
modules/: diffgen.py  hashcomparator.py  logconfig.py
utils/: compare.py  diffgen.py  hashcomparator.py  scrape.py  send_email.py  summarize.py  yn.py
utils/configs/: config.py  logger.py  prompt.py
utils/diffscripts/: diffgen.py  hashcomparator.py
utils/multimedia/: pdfhandler.py
