[project]
name = "wix-scraper"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "beautifulsoup4>=4.13.4",
    "dotenv>=0.9.9",
    "openai>=1.96.1",
    "pdfminer-six>=20250506",
    "pillow>=11.3.0",
    "playwright>=1.46.0",
    "playwright-stealth>=2.0.0",
    "requests>=2.32.4",
    "tqdm>=4.67.1",
]
